# BubblePopper

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: build.yml
_trash/_one/include/: display.h  setup.h
_trash/_one/src/: display.cpp  main.cpp  setup.cpp
_trash/_two/include/: configuration.h  display.h
_trash/_two/src/: configuration.cpp  display.cpp  main.cpp
main/: CMakeLists.txt
main/include/: bubble.h  config.h  display.h  event_queue_wrapper.h  game.h  resources.h  table.h
main/src/: bubble.cpp  config.cpp  display.cpp  event_queue_wrapper.cpp  game.cpp  main.cpp  resources.cpp  table.cpp
paintings/: bubble.xcf
